...
    <string name="create_a_recipe_prompt">create a new recipe</string>
    <string name="import_from_the_web_prompt">import a recipe from a website</string>
    <string name="new_recipe">New Recipe</string>
    <string name="create_first_recipe">Create your first recipe and start your collection!</string>

    <string name="edit_action">Edit</string>
    <string name="save_action">Save</string>
    <string name="title_should_not_be_empty_message">Please add a title.</string>
    <string name="recipe_saved_message">The recipe has been saved.</string>
    <string name="recipe_could_not_be_saved_message">The recipe could not be saved.</string>

    <string name="duplicate_action">Duplicate</string>

    <string name="delete_action">Delete</string>
    <string name="delete_recipe_question">Delete this recipe?</string>
    <string name="recipe_deleted_message">The recipe has been deleted.</string>

    <string name="discard_action">Discard</string>
    <string name="discard_changes_question">Discard changes?</string>

...

    <string name="categories">Categories</string>
    <string name="create_a_category_prompt">Create custom categories to manage your recipes.</string>
    <string name="add_category">Add category</string>
    <string name="add_first_category">Add your first custom category and bring order into your collection!</string>
    <string name="edit_category">Edit category</string>
    <string name="category_name">Name</string>
    <string name="no_categories_message">No categories have been created yet.</string>
    <string name="all_recipes">All recipes</string>
    <string name="mark_as_favorite_action">Mark as favorite</string>
    <string name="remove_from_favorite_action">Remove from favorites</string>
    <string name="favorites">Favorites</string>
    <string name="delete_category_question">Do you really want to delete this category?</string>
...
