<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Broccoli">

    <TextView
        android:id="@+id/categories_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/create_a_category_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/categories"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/category_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_category"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>